@@ -501,8 +501,6 @@ sub check_cpan {
 					  usage => 'used to parse list configuration templates and instanciate list families',
 					 },
 		       );
-
-
     print "##########################################################################################
 # This process will help you install all Perl (CPAN) modules required by Sympa software.
 # Sympa requires from 50 to 65 additional Perl modules to run properly. 
